fixed the overflow on About Us page

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,5 @@
 body{
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 h1{
@@ -8,7 +8,7 @@ h1{
 }
 
 #AboutMe{
-    margin: 50px auto 65px;
+    margin: 50px auto 60px;
     width: fit-content;
     height: fit-content;
 
